Fix expense item overflowing when in edit mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -433,6 +433,7 @@ hr {
   border: 3px solid rgb(150, 52, 255);
   box-sizing: border-box;
   padding: 0.5rem 0rem 0.5rem 1rem;
+  overflow: scroll;
 }
 
 .editable-row select {
